styles/style.css
/* ... */
.shot-title {
  color: rgba(249, 249, 249, 0.8);
  font-size: 1.2rem;
  line-height: 1.4rem;
  position: absolute;
  bottom: 0;
  margin: 1rem;
  text-align: left; }
  @media (min-width: 451px) {
    .shot-title {
      font-size: 0.9rem;
      margin: 1rem 1rem 1.6rem 1rem; } }

.shot-description {
  color: rgba(249, 249, 249, 0.5);
  margin: 1.1rem 1rem;
  font-size: 1rem;
  text-align: right; }
  @media (min-width: 451px) {
    .shot-description {
      font-size: 0.8rem;
      position: absolute;
      bottom: 0;
      margin: 0;
      margin-left: 1rem;
      text-align: left;
      margin-bottom: 0.6rem; } }

.shot-price {
  color: #f9f9f9; }

.shirt {
  background-color: white;
  background-size: 90%;
  background-image: url("../img/tshirt.png");
  margin: 1%;
  width: 200px;
  height: 200px;
  background-repeat: no-repeat;
  background-position: center; }

.switch-toggle a, .switch-light span span {
  display: none; }

/* We can't test for a specific feature,
* so we only target browsers with support for media queries.
*/
/* Checkbox switch
*/
.switch-light {
  display: block;
  min-height: 1.875rem;
  position: relative;
  overflow: visible;
  padding: 0;
  margin-left: 6.25rem; }
  .switch-light * {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box; }
  .switch-light a {
    display: block;
    -webkit-transition: all 0.2s ease-out;
    -moz-transition: all 0.2s ease-out;
    transition: all 0.2s ease-out; }

.switch-light label, .switch-light > span {
  line-height: 1.875rem;
  vertical-align: middle; }

.switch-light label {
  position: relative;
  z-index: 3;
  display: block;
  width: 100%; }

.switch-light input {
  position: absolute;
  opacity: 0;
  z-index: 5; }

.switch-light input:checked ~ a {
  right: 0%; }

.switch-light > span {
  position: absolute;
  left: -6.25rem;
  width: 100%;
  margin: 0;
  padding-right: 6.25rem;
  text-align: left; }

.switch-light > span span {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 5;
  display: block;
  width: 50%;
  margin-left: 6.25rem;
  text-align: center; }

.switch-light > span span:last-child {
  left: 50%; }

.switch-light a {
  position: absolute;
  right: 50%;
  top: 0;
  z-index: 4;
  display: block;
  width: 50%;
  height: 100%;
  padding: 0; }

/* Radio switch
*/
.switch-toggle {
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -ms-border-radius: 5px;
  border-radius: 5px;
  border: 2px solid #C4C4C4;
  cursor: pointer;
  display: table;
  margin: 1rem auto;
  max-width: 28rem;
  min-height: 1.875rem;
  position: relative;
  table-layout: fixed;
  width: 90%; }
  @media all and (min-width: 64rem) {
    .switch-toggle {
      margin: 0 0 1rem 0;
      width: 21rem; } }
  .switch-toggle * {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    font-size: 0.9rem; }
  .switch-toggle a {
    display: block;
    -webkit-transition: all 0.2s ease-out;
    -moz-transition: all 0.2s ease-out;
    transition: all 0.2s ease-out; }
  .switch-toggle input + label {
    cursor: pointer;
    display: table-cell;
    margin: 0;
    padding: 0.1rem 0.5rem;
    position: relative;
    text-align: center;
    width: 50%;
    z-index: 2; }
    @media all and (min-width: 64rem) {
      .switch-toggle input + label {
        font-size: 0.7rem; } }
  @media all and (min-width: 64rem) {
    .switch-toggle.switch-3 {
      width: 18rem; } }

.switch-toggle label, .switch-toggle > span {
  line-height: 1.875rem;
  vertical-align: middle; }

.switch-toggle input {
  position: absolute;
  opacity: 0; }

.switch-toggle a {
  position: absolute;
  top: 0;
  left: 0;
  padding: 0;
  z-index: 1;
  width: 50%;
  height: 100%; }

.switch-toggle input:last-of-type:checked ~ a {
  left: 50%; }

.switch-toggle.switch-3 label, .switch-toggle.switch-3 a {
  width: 33.3333333333%; }

.switch-toggle.switch-3 input:checked:nth-of-type(2) ~ a {
  left: 33.3333333333%; }

.switch-toggle.switch-3 input:checked:last-of-type ~ a {
  left: 66.6666666667%; }

.switch-toggle.switch-4 label, .switch-toggle.switch-4 a {
  width: 25%; }

.switch-toggle.switch-4 input:checked:nth-of-type(2) ~ a {
  left: 25%; }

.switch-toggle.switch-4 input:checked:nth-of-type(3) ~ a {
  left: 50%; }

.switch-toggle.switch-4 input:checked:last-of-type ~ a {
  left: 75%; }

.switch-toggle.switch-5 label, .switch-toggle.switch-5 a {
  width: 20%; }

.switch-toggle.switch-5 input:checked:nth-of-type(2) ~ a {
  left: 20%; }

.switch-toggle.switch-5 input:checked:nth-of-type(3) ~ a {
  left: 40%; }

.switch-toggle.switch-5 input:checked:nth-of-type(4) ~ a {
  left: 60%; }

.switch-toggle.switch-5 input:checked:last-of-type ~ a {
  left: 80%; }

/* Standalone Themes */
/* Candy Theme
* Based on the "Sort Switches / Toggles (PSD)" by Ormal Clarck
* http://www.premiumpixels.com/freebies/sort-switches-toggles-psd/
*/
.switch-candy {
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -ms-border-radius: 5px;
  border-radius: 5px;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #E0E0E0;
  text-align: center; }
  .switch-candy label {
    color: #807E7E;
    -webkit-transition: color 0.2s ease-out;
    -moz-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out; }
  .switch-candy input:checked + label {
    color: #FFF; }
  .switch-candy a {
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    -ms-border-radius: 3px;
    border-radius: 3px;
    border: 2px solid #80BC72;
    box-shadow: 0 0 0 2px #80BC72;
    background-color: #80BC72; }
  .switch-candy.switch-candy-blue a {
    background-color: #4FA7C2;
    border: 2px solid #4FA7C2;
    box-shadow: 0 0 0 2px #4FA7C2; }
  .switch-candy.switch-candy-green a {
    background-color: #80BC72;
    border: 2px solid #80BC72;
    box-shadow: 0 0 0 2px #80BC72; }
/* ... */

